--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -1,1 +1,8 @@
 $breakpoint-small: 960px;
+
+$brand-1: rgb(32, 58, 96);
+$brand-2: rgb(255, 255, 255);
+$brand-3: rgb(4, 149, 95);
+$brand-4: rgb(243, 142, 125);
+
+$brand-font-family: Brandon Grotesque, sans-serif;
