--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@ a {
 
 * {
   box-sizing: border-box;
-  font-family: Brandon Grotesque, sans-serif;
+  font-family: $brand-font-family;
 }
 
 button {
@@ -32,27 +32,27 @@ button {
   width: 11.975rem;
 
   &:not(:disabled) {
-    color: rgb(255, 255, 255);
+    color: $brand-2;
   }
 }
 
 .button {
-  &--blue {
-    background-color: rgb(32, 58, 96);
+  &__blue {
+    background-color: $brand-1;
     margin-left: auto;
     width: 7rem;
     &:hover {
-      background-color: rgb(243, 142, 125);
+      background-color: $brand-4;
     }
   }
 
-  &--content {
+  &__content {
     display: flex;
     margin: auto;
   }
 
-  &--text {
-    color: rgb(255, 255, 255);
+  &__text {
+    color: $brand-2;
     font-size: 1.125rem;
     line-height: normal;
     margin: 0px;
@@ -64,7 +64,7 @@ header {
   -webkit-box-align: center;
   -webkit-box-pack: justify;
   align-items: center;
-  background-color: rgb(255, 255, 255);
+  background-color: $brand-2;
   border-bottom: 1px solid rgba(0, 0, 0, 0.03);
   display: flex;
   height: 4rem;
@@ -73,35 +73,37 @@ header {
   width: 100%;
   z-index: 3;
 
+  @media (min-width: $breakpoint-small) {
+    -webkit-box-pack: start;
+    height: 5.625rem;
+    justify-content: flex-start;
+    padding: 0px 2.5rem;
+  }
+
   .logo {
     line-height: 0;
     width: 10rem;
   }
 }
 
-@media (min-width: $breakpoint-small) {
-  header {
-    -webkit-box-pack: start;
-    height: 5.625rem;
-    justify-content: flex-start;
-    padding: 0px 2.5rem;
-  }
-}
-
 footer {
-  -webkit-box-align: center;
-  -webkit-box-pack: center;
-  align-items: center;
-  background-color: rgb(32, 58, 96);
-  display: flex;
-  height: 3.125rem;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
+  display: none;
 
-  p {
-    color: rgb(255, 255, 255);
-    font-size: 1.125rem;
-    margin: 0px;
+  @media (min-width: $breakpoint-small) {
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    align-items: center;
+    background-color: $brand-1;
+    display: flex;
+    height: 3.125rem;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+
+    p {
+      color: $brand-2;
+      font-size: 1.125rem;
+      margin: 0px;
+    }
   }
 }
